Modificato parte del server per gestire al meglio le date comprese tra il 1990 e il 2000; ancora improvements sul frontend, ora l'ordinamento per data funziona (a parte qualche caso particolare)

--- a/id3kingserver/frontEnd/index.html
+++ b/id3kingserver/frontEnd/index.html
@@ -48,7 +48,7 @@
                   <tbody>
                       <tr ng-repeat="itinerario in itinerari | orderBy:currentOrdering:reverse track by $index">
                           <td class="w10"><a ng-href="{{itinerario.Link}}">{{itinerario.ID | numberFixedLen:3}}</a></td>
-                          <td class="w15">{{itinerario.Data | date:'dd-MM-yyyy'}}</td>
+                          <td class="w15">{{itinerario.Data | date:'dd/MM/yyyy'}}</td>
                           <td class="w15">{{itinerario.Durata | time}}</td>
                           <td class="w20">{{itinerario.Lunghezza / 1000}}&nbspKm</td>
                           <td class="w15">{{itinerario.Dislivello}}&nbspm</td>
