Altri piccoli miglioramenti sul frontend stilistici: iniziato a implementare la view dei filtri

--- a/id3kingserver/frontEnd/index.html
+++ b/id3kingserver/frontEnd/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
 
-    <title>id3king Enhanced</title>
-    <meta name="description" content="id3king Enhanced">
+    <title>id3king JS</title>
+    <meta name="description" content="id3king enhanced by javascript">
     <meta name="author" content="Luxor001">
 
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -91,7 +91,7 @@
 
         </nav>
         <filters-bar expand="openFiltersMenu">
-
+           <header><h2>FILTERS</h2></header> 
         </filters-bar>
     </aside>
 </body>
