cambio di rotta per i filtri: cambiato lo stile in uno più chiaro, bianco

--- a/id3kingserver/frontEnd/index.html
+++ b/id3kingserver/frontEnd/index.html
@@ -18,7 +18,8 @@
     <script type="text/javascript" src="scripts/app.js"></script>
 </head>
 
-<body ng-controller="dataController">
+<body ng-controller="dataController" >
+    <div class="watermark col-md-10" ng-if="openFiltersMenu"> </div>
     <div class="col-md-10 pull-left">
         <div class="mainHeader">
             <div class="title">
