--- a/id3kingserver/frontEnd/index.html
+++ b/id3kingserver/frontEnd/index.html
@@ -60,8 +60,8 @@
                             <span class="glyphicon middleVertical click" ng-click="reverseOrdering('Dislivello', $event)" ng-class="isOrderedBy('Dislivello')"> </span>
                         </th>
                         <th class="w20 click">
-                            <span class="fill click" ng-click="setOrderBy('Difficolta')">DIFFICOLTÁ</span>
-                            <span class="glyphicon middleVertical click" ng-click="reverseOrdering('Difficolta', $event)" ng-class="isOrderedBy('Difficolta')"> </span>
+                            <span class="fill click" ng-click="setOrderBy('Difficolta.valore')">DIFFICOLTÁ</span>
+                            <span class="glyphicon middleVertical click" ng-click="reverseOrdering('Difficolta.valore', $event)" ng-class="isOrderedBy('Difficolta.valore')"> </span>
                         </th>
                         <th class="w50 click">
                             <span class="fill click" ng-click="setOrderBy('NomeLocalita')">LUOGO</span>
@@ -74,13 +74,13 @@
             <section>
                 <table class="table table-striped">
                     <tbody>
-                        <tr ng-repeat="itinerario in itinerari | orderBy:orderings track by $index">
+                        <tr ng-repeat="itinerario in itinerari | trackFilter:filters | orderBy:orderings track by $index">
                             <td class="w10"><a ng-href="{{itinerario.Link}}">{{itinerario.ID | numberFixedLen:3}}</a></td>
                             <td class="w15">{{itinerario.Data | date:'dd-MM-yyyy'}}</td>
                             <td class="w15">{{itinerario.Durata | time}}</td>
                             <td class="w20">{{itinerario.Lunghezza / 1000}}&nbspKm</td>
                             <td class="w20">{{itinerario.Dislivello}}&nbspm</td>
-                            <td class="w20">{{itinerario.Difficolta}}</td>
+                            <td class="w20">{{itinerario.Difficolta.Difficolta}}</td>
                             <td class="w50">{{itinerario.NomeLocalita}}</td>
                             <td class="w100 text-left">{{itinerario.Descrizione}}</td>
                         </tr>
@@ -98,7 +98,7 @@
            <div class="adder relative"><span class="glyphicon glyphicon-plus click" ng-click="addFilter()"> </span> </div>
 
            <div class="filtersContainer">
-             <filter-element ng-repeat="filter in filters track by $index">
+             <filter-element ng-repeat="currentFilter in filters track by $index" filter="currentFilter" delete-function="deleteFilter" difficulty-types="difficultyTypes">
 
              </div>
          </div>
