Spostate le direttive e i filtri nei relativi file

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -18,7 +18,9 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script type="text/javascript" src="scripts/app.js"></script>
+    <script type="text/javascript" src="scripts/directives.js"></script>
     <script type="text/javascript" src="scripts/services.js"></script>
+    <script type="text/javascript" src="scripts/filters.js"></script>
 </head>
 
 <body ng-controller="dataController" >
